# mlflow-with-dvc

./: .gitignore  Dockerfile  README.md  buildspec-docker.yml  buildspec-tests.yml  buildspec.yml  data.dvc  pyproject.toml
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
dags/: dag.py  requirements.txt
data/: images.dvc
mlflow_with_dvc/: pipeline.py  utils.py
notebooks/shipping_catboost_reg/: canvas-sample-shipping-logs.csv  demo.ipynb  requirements.txt  sagemaker_test.ipynb
runs/0/: meta.yaml
runs/0/02bf6bef4bcb41fda3b18e41be0a1cdf/: meta.yaml
runs/0/02bf6bef4bcb41fda3b18e41be0a1cdf/artifacts/model/: MLmodel  requirements.txt
runs/0/02bf6bef4bcb41fda3b18e41be0a1cdf/metrics/: mae  r2  rmse
runs/0/02bf6bef4bcb41fda3b18e41be0a1cdf/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
runs/0/a4906638876d467aaf51eb7a92e9c455/: meta.yaml
runs/0/a4906638876d467aaf51eb7a92e9c455/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml
runs/0/a4906638876d467aaf51eb7a92e9c455/metrics/: mae  r2  rmse
runs/0/a4906638876d467aaf51eb7a92e9c455/tags/: mlflow.log-model.history  mlflow.runName
runs/0/b7707452ebc5402e9789b8d491989a92/: meta.yaml
runs/0/b7707452ebc5402e9789b8d491989a92/metrics/: mae  r2  rmse
runs/0/b7707452ebc5402e9789b8d491989a92/tags/: mlflow.runName  mlflow.source.name
runs/0/e0f0cd587408442eb357f0b17cb14e8b/: meta.yaml
runs/0/e0f0cd587408442eb357f0b17cb14e8b/artifacts/model/: MLmodel
runs/0/e0f0cd587408442eb357f0b17cb14e8b/metrics/: mae  r2  rmse
runs/0/e0f0cd587408442eb357f0b17cb14e8b/tags/: mlflow.log-model.history  mlflow.runName
runs/models/ElasticnetWineModel/: meta.yaml
runs/models/ElasticnetWineModel/version-1/: meta.yaml
sagemaker-new-reinvent/: train.py  utils.py
sagemaker-new-reinvent/pipeline_steps/: pipeline.py
sagemaker-new-reinvent/train_pipeline/: pipeline.py  steps.py
src/sm_examples/shipping_catboost_reg/: pipeline.py  steps.py
