[tool.poetry]
name = "mlflow-with-dvc"
version = "0.1.0"
description = "example of mlflow with dvc"
authors = ["Ryan Nazareth"]
readme = "README.md"
packages = [{include = "mlflow_with_dvc"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.4.1"
dvc = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
ruff = "^0.0.274"


[tool.poetry.scripts]
my-script = "mlflow_with_dvc:pipeline"

[tool.black]
line-length = 88
target-version = ['py310']


[tool.ruff]
line-length = 88
fix = true
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "I", # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q", # flake8-quotes
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
