[tool.poetry]
name = "sagemaker-new-reinvent"
version = "0.1.0"
description = "new features in sagemaker announced in reivent 2023"
authors = ["Ryan Nazareth"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.4.1"
dvc = "^3.1.0"
dvc-s3 = "^2.23.0"
boto3 = "^1.33.3"
sagemaker = "^v2.202.1"
polars = "^0.20.2"
pre-commit = "^3.6.0"
pytest = "^7.4.3"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
ruff = "^0.0.274"

[tool.black]
line-length = 88
target-version = ['py311']


[tool.ruff]
line-length = 88
fix = true
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "I", # isort
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q", # flake8-quotes
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
