[tool.poetry]
name = "sm_examples"
version = "0.1.0"
description = "new features in sagemaker announced in reivent 2023"
authors = ["Ryan Nazareth"]
readme = "README.md"
packages = [{include = "sm_examples", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.3"
sagemaker = "^v2.202.1"
scikit-learn = "^1.3.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
catboost = "^1.2.2"
fsspec = "^2024.2.0"
s3fs = "^2024.2.0"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"